# architectureModel

chip8_model/: basic_model.hpp
chip8_model_test/: model_gtest.hpp
framework/: CMakeLists.txt
framework/inc/: clock.hpp  sim_conn_base.hpp  sim_conn_clock.hpp  sim_conn_fifo.hpp  sim_conn_framework.hpp  sim_conn_module.hpp  sim_conn_trace.hpp
framework/src/: clock.cpp  sim_conn_fifo.cpp  sim_conn_module.cpp
framework_tests/: sim_conn_gtest.cpp  sim_conn_gtest.hpp
model/: main.cpp  sim_conn_gtest.cpp  sim_conn_gtest.hpp
tests/: model_gtest.cpp  model_gtest.hpp
